--- a/administration/templates/dashboard.html
+++ b/administration/templates/dashboard.html
@@ -5,16 +5,16 @@
         <div class="bg-white rounded-md border border-gray-100 p-4 shadow-md shadow-black/5">
             <div class="flex justify-between mb-6">
                 <div>
-                    <div class="text-2xl font-semibold mb-1">{{positions | length}}</div>
-                    <div class="text-lg font-medium text-gray-600">No. of Positions</div>
+                    <div class="text-2xl  font-semibold mb-1">{{positions | length}}</div>
+                    <div class="text-lg font-medium text-green-600">No. of Positions</div>
                 </div>
             </div>
         </div>
         <div class="bg-white rounded-md border border-gray-100 p-4 shadow-md shadow-black/5">
             <div class="flex justify-between mb-6">
                 <div>
-                    <div class="text-2xl font-semibold mb-1">{{candidates | length}}</div>
-                    <div class="text-lg font-medium text-gray-600">No. of Candidates</div>
+                    <div class="text-2xl  font-semibold mb-1">{{candidates | length}}</div>
+                    <div class="text-lg font-medium text-green-600">No. of Candidates</div>
                 </div>
             </div>
         </div>
@@ -22,15 +22,15 @@
             <div class="flex justify-between mb-6">
                 <div>
                     <div class="text-2xl font-semibold mb-1">{{voters | length}}</div>
-                    <div class="text-lg font-medium text-gray-600">Total Voter</div>
+                    <div class="text-lg font-medium text-green-600">Total Voter</div>
                 </div>
             </div>
         </div>
         <div class="bg-white rounded-md border border-gray-100 p-4 shadow-md shadow-black/5">
             <div class="flex justify-between mb-6">
                 <div>
-                    <div class="text-2xl font-semibold mb-1">5</div>
-                    <div class="text-lg font-medium text-gray-600">Voters Voted</div>
+                    <div class="text-2xl  font-semibold mb-1">None</div>
+                    <div class="text-lg font-medium text-green-600">Voters Voted</div>
                 </div>
             </div>
         </div>
