--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>DACSU</title>
+  <title>DUCSU</title>
   <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
 
 </head>
@@ -14,9 +14,16 @@
       <!-- Content block -->
       <div class="bg-white p-2 rounded shadow">
         <!-- Block-specific content goes here -->
+
+        
+
         {% block content %}
         
         {% endblock content %}
+      
+
+       
+
       </div>
     </div>
 </body>
