--- a/administration/templates/sidebar.html
+++ b/administration/templates/sidebar.html
@@ -31,6 +31,9 @@
       {% endif %}
 
       <!-- Add hover effect for EXIT and Logout (if needed) -->
+
+      <li><a href="{% url 'voterDashboard' %}" class="text-green-500 block py-2 px-4 hover:bg-green-200 font-bold"><i
+            class="fa fa-dashboard"></i>Voter Dashboard</a></li>
       <li><a href="{% url 'show_ballot' %}" class="text-green-500 block py-2 px-4 hover:bg-green-200 font-bold"><i
             class="fa fa-dashboard"></i> <span>Show Ballot</span></a></li>
 
