--- a/administration/templates/voters.html
+++ b/administration/templates/voters.html
@@ -1,39 +1,40 @@
 {% extends "root.html" %}
- {% block content %}
+{% block content %}
 
-        <div class="col-lg-12 mx-auto shadow text-black">
-            <div class="bg-green-500 text-white p-4 text-center rounded-t-lg">
-                <h2 class="text-2xl font-bold">Voters</h2>
-            </div>                <div class="p-4">                  
+<div class="col-lg-12 mx-auto shadow text-black">
+    <div class="bg-green-500 text-white p-4 text-center rounded-t-lg">
+        <h2 class="text-2xl font-bold">Voters</h2>
+    </div>
+    <div class="p-4">
 
-                {% if voters %}
-                <table class="min-w-full border border-gray-300">
-                    <thead>
-                            <tr>
-                                <th scope="py-2 px-4 bg-gray-100">Username</th>
-                                <th scope="py-2 px-4 bg-gray-100">Email</th>
-                                <th scope="py-2 px-4 bg-gray-100">Action</th>
-                            </tr>
-                        </thead>
-                        <thead>
-                            {% for vo in voters %}
-                            <tr>
-                                <td class="py-2 px-4 text-center">{{vo.username}}</td>
-                                <td class="py-2 px-4 text-center">{{vo.email}}</td>
-                                <td class="py-2 px-4 text-center"> 
-                                    <a class="text-white bg-blue-500 hover:bg-blue-700 py-1 px-2 rounded" href="{% url 'edit_voter' id=vo.id %}">Edit</a>
-                                    <a class="text-white bg-red-500 hover:bg-red-700 py-1 px-2 rounded" href="{% url 'delete_voter' id=vo.id %}">Delete</a>
-                                </td>
-                                
-                            </tr>
-                            {% endfor %}
-                        </thead>                            
-                    </table>
-                    {% else %}
-                    <h1>There is no data available</h1>   
-                    
-                {% endif %}                    
-            </div>
-        </div>
+        {% if voters %}
+        <table class="min-w-full border border-gray-300">
+            <thead>
+                <tr>
+                    <th scope="py-2 px-4 bg-gray-100">Username</th>
+                    <th scope="py-2 px-4 bg-gray-100">Email</th>
+                    <th scope="py-2 px-4 bg-gray-100">Action</th>
+                </tr>
+            </thead>
+            <thead>
+                {% for vo in voters %}
+                <tr>
+                    <td class="py-2 px-4 text-center">{{vo.username}}</td>
+                    <td class="py-2 px-4 text-center">{{vo.email}}</td>
+                    <td class="py-2 px-4 text-center">
+                        <a href="{% url 'edit_voter' id=vo.id %}"><box-icon name='edit'></box-icon></a>
+                        <a href="{% url 'delete_voter' id=vo.id %}"><box-icon name='minus'></box-icon></a>
+                    </td>
 
-{% endblock content %} 
+                </tr>
+                {% endfor %}
+            </thead>
+        </table>
+        {% else %}
+        <h1>There is no data available</h1>
+
+        {% endif %}
+    </div>
+</div>
+
+{% endblock content %}
