--- a/administration/templates/voters.html
+++ b/administration/templates/voters.html
@@ -35,5 +35,24 @@
                 {% endif %}                    
             </div>
         </div>
+        <nav aria-label="Page navigation example">
+            <ul class="inline-flex -space-x-px text-sm">
+              {% if voters.has_previous %}
+        
+              <li>
+                <a href="?page={{voters.previous_page_number}}" class="flex items-center justify-center px-3 h-8 ml-0 leading-tight text-gray-500 bg-white border border-gray-300 rounded-l-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">Previous</a>
+              </li>
+              {% endif %}
+              {% for i in voters.paginator.page_range %}
+               <li>
+                <a href="?page={{i}}"class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">{{i}}</a>
+                {% endfor %}
+              </li>
+              {% if voters.has_next %}
+              <li>
+                <a href="?page={{voters.next_page_number}}" class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 rounded-r-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">Next</a>
+              </li>{% endif %}
+            </ul>
+          </nav>
 
 {% endblock content %} 
