--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -1,3 +1,4 @@
+
 {% extends "base.html" %}
 {% block content %}
 <!-- {% if request.user.is_authenticated %}
@@ -25,9 +26,15 @@
                     id="password" name="password">
             </div>
             <div class="mt-2">
+                
+                <p class="mt-2">Forgotten Password? <a href="{% url 'change_pass' %}" class="text-green-500 underline">Forgot Password</a></p>
+            </div>
+            <div class="mt-2">
                 <button type="submit" class="rounded-sm border-2 border-green-500 bg-green-500 text-white py-2 w-full">Login</button>
             </div>
             <p class="mt-2">Don't have an account? Please <a href="{% url 'register' %}" class="text-green-500 underline">Register</a></p>
+            
+            
             
         </div>
     </div>
