--- a/administration/templates/sidebar.html
+++ b/administration/templates/sidebar.html
@@ -35,6 +35,8 @@
             class="fa fa-dashboard"></i> <span>My profile</span></a></li>
       <li><a href="{% url 'logout' %}" class="text-green-500 block py-2 px-4 hover:bg-green-200 font-bold"><i
             class="fa fa-power-off"></i> <span>Logout</span></a></li>
+      <li><a href="{% url 'change_pass' %}" class="text-green-500 block py-2 px-4 hover:bg-green-200 font-bold"><i
+            class="fa fa-power-off"></i> <span>Change Password</span></a></li>
     </ul>
 
   </section>
