--- a/administration/templates/dashboard.html
+++ b/administration/templates/dashboard.html
@@ -10,7 +10,7 @@
         <div class="bg-white rounded-md border border-gray-100 p-4 shadow-md shadow-black/5">
             <div class="flex justify-between mb-6">
                 <div>
-                    <div class="text-2xl  font-semibold mb-1">{{positions.count}}</div>
+                    <div class="text-2xl  font-semibold mb-1">{{ positions | length }}</div>
                     <div class="text-lg font-medium text-green-600">No. of Positions</div>
                 </div>
             </div>
@@ -18,7 +18,7 @@
         <div class="bg-white rounded-md border border-gray-100 p-4 shadow-md shadow-black/5">
             <div class="flex justify-between mb-6">
                 <div>
-                    <div class="text-2xl  font-semibold mb-1">{{candidates.count}}</div>
+                    <div class="text-2xl  font-semibold mb-1">{{ candidates| length }}</div>
                     <div class="text-lg font-medium text-green-600">No. of Candidates</div>
                 </div>
             </div>
@@ -26,7 +26,7 @@
         <div class="bg-white rounded-md border border-gray-100 p-4 shadow-md shadow-black/5">
             <div class="flex justify-between mb-6">
                 <div>
-                    <div class="text-2xl font-semibold mb-1">{{voters.count}}</div>
+                    <div class="text-2xl font-semibold mb-1">{{ voters | length }}</div>
                     <div class="text-lg font-medium text-green-600">Total Voter</div>
                 </div>
             </div>
@@ -34,7 +34,7 @@
         <div class="bg-white rounded-md border border-gray-100 p-4 shadow-md shadow-black/5">
             <div class="flex justify-between mb-6">
                 <div>
-                    <div class="text-2xl  font-semibold mb-1">{{votes.count}}</div>
+                    <div class="text-2xl  font-semibold mb-1">{{ votes | length }}</div>
                     <div class="text-lg font-medium text-green-600">Voters Voted</div>
                 </div>
             </div>
