--- a/voting/templates/ballot.html
+++ b/voting/templates/ballot.html
@@ -3,17 +3,30 @@
 {% block head_title %} DUCSU | Show Ballot{% endblock %} 
 {% block content %}
 
-<div class="col-sm-10 col-sm-offset-1">
+<div class="w-[600px] mx-auto ml-[250px]">
 
-<form method="POST" id="ballotForm" action="{% url 'submit_ballot' %}">
-  {% csrf_token %}
-  {{ ballot|safe }}
-  <div class="text-center gap-6 flex justify-center">
-    <button type="button" class="border-2 border-green-700 rounded-md px-2 hover:bg-green-700 hover:text-white" id="preview"><i
-            class="fa fa-file-text"></i> Preview</button>
-    <button type="submit" class="border-2 border-blue-500 rounded-md px-2 hover:bg-blue-500" name="submit_vote"><i
-            class="fa fa-check-square-o"></i> Submit</button>
-</div>
-</form>
+        <form method="POST" id="ballotForm" action="{% url 'submit_ballot' %}">
+                
+        {% csrf_token %}
+        <p class="border-2 border-red-700"><hr></p>
+        <div class="text-2xl text-center justify-center flex gap-32">
+                
+               <p class=""> {{ ballot | safe }}</p>
+               
+               
+        </div>
+       
+        
+        
+        
+                <div class="text-center gap-6 flex justify-center">
+
+                        <button type="button" class="border-2 border-green-700 rounded-md px-2 hover:bg-green-700 hover:text-white" id="preview">
+                        <i class="fa fa-file-text"></i> Preview</button>
+
+                        <button type="submit" class="border-2 border-blue-500 rounded-md px-2 hover:bg-blue-500" name="submit_vote">
+                        <i class="fa fa-check-square-o"></i> Submit</button>
+                </div>
+        </form>
     </div>
 {% endblock content %}
