--- a/administration/templates/navbar.html
+++ b/administration/templates/navbar.html
@@ -1,29 +1,58 @@
-{% load  static %}
+{% load static %}
 
 <nav class="flex items-center justify-between bg-white px-10 m-4">
   <div class="flex justify-between items-center w-full ">
 
     <!-- Logo on the left side -->
     <div class="relative ">
-        <img class="h-15 w-40" src="{% static 'images/logo_t.png' %}" alt="Logo">
+      <img class="h-15 w-40" src="{% static 'images/logo_t.png' %}" alt="Logo">
     </div>
 
     <!-- Navigation and user info on the right side -->
     <div class="flex items-center ml-auto">
 
-        {% if request.user.is_authenticated %}
-        <div class="text-green-600 my-auto font-black px-5">Welcome, {{ request.user.username }}</div>
+      {% if request.user.is_authenticated %}
+      <div class="text-green-600 my-auto font-black px-5">Welcome, {{ request.user.username }}</div>
 
-        <a href="{% url 'home' %}" class="inline-block font-medium text-sm px-4 py-2 leading-none bg-green-600 rounded text-white border-white hover:border-transparent hover:text-white hover:bg-red-700 mt-4 lg:mt-0 mr-2">Home</a>
 
-        <a href="{% url 'logout' %}" class="inline-block font-medium text-sm px-4 py-2 leading-none bg-green-600 rounded text-white border-white hover:border-transparent hover:text-white hover:bg-red-700 mt-4 lg:mt-0">Logout</a>
-        {% else %}
-        <a href="{% url 'home' %}" class="inline-block font-medium text-sm px-4 py-2 leading-none bg-green-600 rounded text-white border-white hover:border-transparent hover:text-white hover:bg-red-700 mt-4 lg:mt-0 mr-2">Home</a>
+      <div class="relative" id="dropdownButton">
+        <div id="button" onclick="toggleDropdown()">
+          <a href="#"
+            class="bellicon inline-block font-medium text-sm px-4 py-2 leading-none  border-white mt-4 mr-1 lg:mt-0">
+            <box-icon name='bell'></box-icon>
+            <span class="badge">3</span>
+          </a>
 
-        <a href="{% url 'login' %}" class="inline-block font-medium text-sm px-4 py-2 leading-none bg-green-600 rounded text-white border-white hover:border-transparent hover:text-white hover:bg-red-700 mt-4 lg:mt-0">Login</a>
+        </div>
+        <div id="dropdown"
+          class="rounded border-[1px] border-gray-300 bg-white py-4 absolute top-[50px] w-[200px] shadow-md hidden">
+          <div class="cursor-pointer hover:bg-gray-300 p-4">Notification1</div>
+          <div class="cursor-pointer hover:bg-gray-300 p-4">Notification2</div>
+          <div class="cursor-pointer hover:bg-gray-300 p-4">Notification3</div>
+        </div>
+      </div>
+      <a href="{% url 'home' %}"
+        class="inline-block font-medium text-sm px-4 py-2 leading-none bg-green-600 rounded text-white border-white hover:border-transparent hover:text-white hover:bg-red-700 mt-4 lg:mt-0 mr-2">Home</a>
 
-        <a href="{% url 'register' %}" class="inline-block font-medium text-sm px-4 py-2 leading-none bg-green-600 rounded text-white border-white hover:border-transparent hover:text-green-600 hover:bg-white mt-4 lg:mt-0">Register</a>
-        {% endif %}
+      <a href="{% url 'logout' %}"
+        class="inline-block font-medium text-sm px-4 py-2 leading-none bg-green-600 rounded text-white border-white hover:border-transparent hover:text-white hover:bg-red-700 mt-4 lg:mt-0">Logout</a>
+      {% else %}
+      <a href="{% url 'home' %}"
+        class="inline-block font-medium text-sm px-4 py-2 leading-none bg-green-600 rounded text-white border-white hover:border-transparent hover:text-white hover:bg-red-700 mt-4 lg:mt-0 mr-2">Home</a>
+
+      <a href="{% url 'login' %}"
+        class="inline-block font-medium text-sm px-4 py-2 leading-none bg-green-600 rounded text-white border-white hover:border-transparent hover:text-white hover:bg-red-700 mt-4 lg:mt-0">Login</a>
+
+      <a href="{% url 'register' %}"
+        class="inline-block font-medium text-sm px-4 py-2 leading-none bg-green-600 rounded text-white border-white hover:border-transparent hover:text-green-600 hover:bg-white mt-4 lg:mt-0">Register</a>
+      {% endif %}
     </div>
   </div>
 </nav>
+
+<script>
+  function toggleDropdown() {
+    let dropdownButton = document.querySelector('#dropdownButton #dropdown');
+    dropdown.classList.toggle('hidden');
+  }
+</script>
