--- a/administration/templates/root.html
+++ b/administration/templates/root.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -8,6 +9,13 @@
   <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet" />
   <!-- for icons  -->
   <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+
+  <!-- custom style -->
+  <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css" />
+  <!-- custom javascript -->
+  <script src="{% static 'js/script.js' %}" type="text/javascript"></script>
+
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body class="flex flex-col min-h-screen">
@@ -31,10 +39,28 @@
       </div>
     </div>
     {% endif %}
-
   </div>
+  {{ room_name|json_script:"room-name" }}
+  <script>
+    const roomName = JSON.parse(document.getElementById('room-name').textContent);
 
+    const chatSocket = new WebSocket(
+      'ws://'
+      + window.location.host
+      + '/ws/notification/'
+      + roomName
+      + '/'
+    );
 
+    chatSocket.onmessage = function (e) {
+      const data = JSON.parse(e.data);
+      //document.querySelector('#chat-log').value += (data.message + '\n');
+    };
+
+    chatSocket.onclose = function (e) {
+      console.error('Chat socket closed unexpectedly');
+    };
+  </script>
 </body>
 
 </html>
