--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,17 @@
-.bg {
+.bellicon {
+  position: relative;
+}
+.badge {
+  position: absolute;
+  top: -5px;
+  right: -1px;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  border: 2px solid #fff;
   background-color: red;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
 }
