--- a/templates/home.html
+++ b/templates/home.html
@@ -1,92 +1,26 @@
-<<<<<<< HEAD
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>
-        {% block head_title %}DUCSU{% endblock %}
-    </title>
-    <script src="https://cdn.tailwindcss.com"></script>
-</head>
-
-<body>
-    <div class="h-screen bg-green-700">
-        <div class="container max-w-[1280px] mx-auto ">
-            <div class="flex justify-between items-center">
-                <div>
-                    <img class="absolute h-30 w-80 -left-4 -top-2" src="static/images/ducsu_logo.png" alt="Logo">
-                </div>
-
-                <div class="text-white flex pt-6">
-                    {% if request.user.is_authenticated %}
-                    <a class="hover:bg-green-400 hover:rounded-xl hover:px-2 px-2" href="{% url 'home' %}">Home</a>
-                    <a class="hover:bg-green-400 hover:rounded-xl hover:px-2 px-2" href="{% url 'myprofile' %}">Welcome,
-                        {{ request.user.username }}</a>
-                    {% else %}
-                    <a class="hover:bg-green-400 hover:rounded-xl hover:px-2 px-2" href="{% url 'home' %}">Home</a>
-                    <a class="hover:bg-green-400 hover:rounded-xl hover:px-2 px-2" href="{% url 'login' %}">Login</a>
-                    <a class="hover:bg-green-400 hover:rounded-xl hover:px-2 px-2"
-                        href="{% url 'register' %}">Register</a>
-                    {% endif %}
-                </div>
-            </div>
-
-
-
-            <div class="flex gap-[100px]">
-                <div class="text-sky-200 w-1/4 flex flex-col gap-10 pt-[200px]">
-                    <div class="text-5xl font-bold">
-                        <h1>Online Voting</h1>
-                    </div>
-                    <div>
-                        <p>Lorem ipsum dolor sit amet consectetur,
-                            adipisicing elit. Eum enim odio assumenda commodi, mollitia quaerat!
-                        </p>
-                    </div>
-                    <div>
-                        <a href="{% url 'position' %}"
-                            class="border-2 border-xl rounded-3xl p-2 text-md hover:border-green-400 hover:text-white">Get
-                            Started</a>
-                    </div>
-                </div>
-
-
-                <div>
-                    <div class="pt-[30px]">
-                        <img class="w-[800px]" src="static/images/home.png" alt="">
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    </div>
-</body>
-
-</html>
-=======
 {% extends "base.html" %}
 
 {% block content %}
-<div class="h-screen bg-[#032245]" >
+<div class="h-screen bg-[#032245]">
     <div class="container max-w-[1280px] mx-auto ">
 
         <div class="flex justify-between pt-8">
             <div>
-                <img class="absolute h-30 w-80 -left-4 -top-2" src="static/images/ducsu_logo.png" alt="Logo">                
+                <img class="absolute h-30 w-80 -left-4 -top-2" src="static/images/ducsu_logo.png" alt="Logo">
             </div>
             <div class="text-white">
                 <div class="flex gap-[20px] pt-4 text-white font-bold">
 
                     {% if request.user.is_authenticated %}
                     <a class="hover:bg-pink-500 hover:rounded-xl hover:px-2 px-2" href="{% url 'home' %}">Home</a>
-                    <a class="hover:bg-pink-500 hover:rounded-xl hover:px-2 px-2" href="{% url 'myprofile' %}">Welcome, {{ request.user.username }}</a>
-                    {% else %}                      
+                    <a class="hover:bg-pink-500 hover:rounded-xl hover:px-2 px-2" href="{% url 'myprofile' %}">Welcome,
+                        {{ request.user.username }}</a>
+                    {% else %}
 
                     <a class="hover:bg-pink-500 hover:rounded-xl hover:px-2 px-2" href="{% url 'home' %}">Home</a>
                     <a class="hover:bg-pink-500 hover:rounded-xl hover:px-2 px-2" href="{% url 'login' %}">Login</a>
-                    <a class="hover:bg-pink-500 hover:rounded-xl hover:px-2 px-2" href="{% url 'register' %}">Register</a>
+                    <a class="hover:bg-pink-500 hover:rounded-xl hover:px-2 px-2"
+                        href="{% url 'register' %}">Register</a>
 
                     {% endif %}
                 </div>
@@ -103,11 +37,14 @@
                     <h1>We Make Online Elections Easy and Affordable.</h1>
                 </div>
                 <div>
-                    <p>This Site is a secure online voting platform that makes it easy to run elections at a fraction of the usual cost. We're the leading provider of ranked choice elections, which help achieve more democratic outcomes by better representing the will of your voters.
+                    <p>This Site is a secure online voting platform that makes it easy to run elections at a fraction of
+                        the usual cost. We're the leading provider of ranked choice elections, which help achieve more
+                        democratic outcomes by better representing the will of your voters.
                     </p>
                 </div>
                 <div class="pt-5">
-                    <a href="{% url 'position' %}" class="border-2 rounded-3xl p-2 text-md hover:border-pink-500 hover:text-white">Get Started</a>
+                    <a href="{% url 'position' %}"
+                        class="border-2 rounded-3xl p-2 text-md hover:border-pink-500 hover:text-white">Get Started</a>
                 </div>
             </div>
 
@@ -117,8 +54,8 @@
                 </div>
             </div>
         </div>
-                            
-    </div>      
+
+    </div>
 </div>
 
 
@@ -132,21 +69,23 @@
             <hr class="w-[400px] mx-auto">
         </div>
         <div class="flex justify-between  text-white gap-6">
-            
+
             <div class="mt-12  mx-auto text-center">
                 <div class="text-center">
                     <img class=" h-28 mx-auto" src="static/images/poll.png" alt="">
                 </div>
                 <h1 class="text-3xl text-center font-bold pb-2">Online Elections</h1>
-                <p>Send your voters an email with secure, single-use voting links that ensure only authorized voters can vote, once.</p>
+                <p>Send your voters an email with secure, single-use voting links that ensure only authorized voters can
+                    vote, once.</p>
             </div>
 
             <div class="mt-10  mx-auto text-center">
                 <div class="texte-center">
-                    <i class="fa-solid fa-square-poll-horizontal mx-auto text-7xl pt-10" ></i>
+                    <i class="fa-solid fa-square-poll-horizontal mx-auto text-7xl pt-10"></i>
                 </div>
                 <h1 class="text-3xl font-bold pb-5">Online Polls</h1>
-                <p>Create a personalized poll that anyone can vote on, and publish it using your website, email, or social media.</p>
+                <p>Create a personalized poll that anyone can vote on, and publish it using your website, email, or
+                    social media.</p>
             </div>
 
             <div class="mt-10  mx-auto text-center">
@@ -154,7 +93,8 @@
                     <i class="fa-solid fa-earth-europe pt-10 text-7xl"></i>
                 </div>
                 <h1 class="text-3xl text-center font-bold pb-5">Automated Ballot Counts</h1>
-                <p>Count ranked ballots that you've already collected (using e.g., paper ballots or your own vote collection software).</p>
+                <p>Count ranked ballots that you've already collected (using e.g., paper ballots or your own vote
+                    collection software).</p>
             </div>
         </div>
     </div>
@@ -170,22 +110,23 @@
 
         <div class="flex justify-between ">
             <div class="w-2/4">
-                <img src="static/images/com.png"  alt="">
+                <img src="static/images/com.png" alt="">
             </div>
             <div class="w-[500px] p-2">
                 <h1 class="text-4xl font-bold pt-14 pb-5 text-gray-900 ">We Also Works On</h1>
                 <p class="text-gray-700 ">
                     Online makes it super easy to combine having on-site and offsite voters in your election.
-                    By using single-use code voters (which also come in handy when spouses share the same email address), 
-                    you can have voters who can make it to your venue cast their vote in booths using PCs or tablets, 
-                    and voters who can't make it cast their vote by email on their own devices. Once the voting ends,We 
+                    By using single-use code voters (which also come in handy when spouses share the same email
+                    address),
+                    you can have voters who can make it to your venue cast their vote in booths using PCs or tablets,
+                    and voters who can't make it cast their vote by email on their own devices. Once the voting ends,We
                     will provide you with the final count directly, without any manual steps on your part.
                     See our blog post for on-site elections for more details.
                 </p>
 
             </div>
         </div>
-        
+
 
     </div>
 </div>
@@ -200,34 +141,33 @@
         </div>
         <form action="">
             <div class="">
-                <input class="border border-green-700 w-2/4 p-2 rounded-md focus:outline-none" type="text" name="fname" id="fname" placeholder="Write your full name">
+                <input class="border border-green-700 w-2/4 p-2 rounded-md focus:outline-none" type="text" name="fname"
+                    id="fname" placeholder="Write your full name">
             </div>
             <div class="mt-3">
-                <input class="border border-green-700 w-2/4 p-2 rounded-md focus:outline-none" type="text" name="fname" id="fname" placeholder="Write your Email">
+                <input class="border border-green-700 w-2/4 p-2 rounded-md focus:outline-none" type="text" name="fname"
+                    id="fname" placeholder="Write your Email">
             </div>
             <div class="mt-3 mb-3">
-                <input class="border border-green-700 w-2/4 p-2 rounded-md focus:outline-none" type="text" name="fname" id="fname" placeholder="Write your contact number">
+                <input class="border border-green-700 w-2/4 p-2 rounded-md focus:outline-none" type="text" name="fname"
+                    id="fname" placeholder="Write your contact number">
             </div>
 
-            <textarea class="w-2/4 border border-green-700 rounded-md focus:outline-none p-3"  name="" id="" rows="8" placeholder="Write your Messege..">
+            <textarea class="w-2/4 border border-green-700 rounded-md focus:outline-none p-3" name="" id="" rows="8"
+                placeholder="Write your Messege..">
 
             </textarea>
-            
-       
-        <div class="text-center pt-5 ">
-            <button class="shadow-xl shadow-cyan-700/30 font-bold text-white text-xl p-2 border border-blue-500 rounded-xl hover:bg-sky-700 cursor-pointer" type="button">Send Messege</button>
-        </div>
-    </form>
+
+
+            <div class="text-center pt-5 ">
+                <button
+                    class="shadow-xl shadow-cyan-700/30 font-bold text-white text-xl p-2 border border-blue-500 rounded-xl hover:bg-sky-700 cursor-pointer"
+                    type="button">Send Messege</button>
+            </div>
+        </form>
     </div>
-</section >
+</section>
 
 
 
 {% endblock content %}
-
-
-
-
-
-
->>>>>>> eb37ddaf7aaf26cde69ddfab51e4d46fab8ecd99
